--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,9 +1,125 @@
 <div class="container">
-  <table>
-    <tbody>
-      <tr *ngFor="let user of users">
-        <td>{{ user.name }}</td>
-      </tr>
-    </tbody>
+  <table mat-table matSort [dataSource]="dataSource" class="mat-elevation-z8">
+    <ng-container matColumnDef="index">
+      <th mat-header-cell *matHeaderCellDef> # </th>
+      <td mat-cell *matCellDef="let user"> {{ user.index }} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="_id">
+      <th mat-header-cell *matHeaderCellDef> Id </th>
+      <td mat-cell *matCellDef="let user"> {{ user._id }} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+      <td mat-cell *matCellDef="let user"> {{ user.name }} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="picture">
+      <th mat-header-cell *matHeaderCellDef> Picture </th>
+      <td mat-cell *matCellDef="let user">
+        <img [src]="user.picture">
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="isActive">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Is Active </th>
+      <td mat-cell *matCellDef="let user"> {{ user.isActive }} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="balance">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Balance </th>
+      <td mat-cell *matCellDef="let user"> {{ user.balance }} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="age">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Age </th>
+      <td mat-cell *matCellDef="let user"> {{ user.age }} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="eyeColor">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Eye Color </th>
+      <td mat-cell *matCellDef="let user"> {{ user.eyeColor }} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="gender">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Gender </th>
+      <td mat-cell *matCellDef="let user"> {{ user.gender }} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="company">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Company </th>
+      <td mat-cell *matCellDef="let user"> {{ user.company }} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="email">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Email </th>
+      <td mat-cell *matCellDef="let user"> {{ user.email }} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="phone">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Phone </th>
+      <td mat-cell *matCellDef="let user"> {{ user.phone }} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="address">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Address </th>
+      <td mat-cell *matCellDef="let user"> {{ user.address }} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="about">
+      <th mat-header-cell *matHeaderCellDef> about </th>
+      <td mat-cell *matCellDef="let user"> {{ user.about }} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="registered">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Registered </th>
+      <td mat-cell *matCellDef="let user"> {{ user.registered }} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="latitude">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Latitude </th>
+      <td mat-cell *matCellDef="let user"> {{ user.latitude }} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="longitude">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Longitude </th>
+      <td mat-cell *matCellDef="let user"> {{ user.longitude }} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="greeting">
+      <th mat-header-cell *matHeaderCellDef> greeting </th>
+      <td mat-cell *matCellDef="let user"> {{ user.greeting }} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="favoriteFruit">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Favorite Fruit </th>
+      <td mat-cell *matCellDef="let user"> {{ user.favoriteFruit }} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="friends">
+      <th mat-header-cell *matHeaderCellDef> Friends </th>
+      <td mat-cell *matCellDef="let user">
+        <ul>
+          <li *ngFor="let friend of user.friends">
+            {{ friend.name }}
+          </li>
+        </ul>
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="tags">
+      <th mat-header-cell *matHeaderCellDef> Tags </th>
+      <td mat-cell *matCellDef="let user">
+        <ul>
+          <li *ngFor="let tag of user.tags">
+            {{ tag }}
+          </li>
+        </ul>
+      </td>
+    </ng-container>
+  
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
 </div>
