--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -2,7 +2,7 @@
   <mat-form-field>
     <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
   </mat-form-field>
-  
+
   <table mat-table matSort [dataSource]="dataSource" class="mat-elevation-z8">
     <ng-container matColumnDef="index">
       <th mat-header-cell *matHeaderCellDef> # </th>
@@ -11,19 +11,12 @@
 
     <ng-container matColumnDef="_id">
       <th mat-header-cell *matHeaderCellDef> Id </th>
-      <td mat-cell *matCellDef="let user"> {{ user._id }} </td>
+      <td mat-cell *matCellDef="let user" class="large-data"> {{ user._id }} </td>
     </ng-container>
 
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
-      <td mat-cell *matCellDef="let user"> {{ user.name }} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="picture">
-      <th mat-header-cell *matHeaderCellDef> Picture </th>
-      <td mat-cell *matCellDef="let user">
-        <img [src]="user.picture">
-      </td>
+      <td mat-cell *matCellDef="let user" class="large-data"> {{ user.name }} </td>
     </ng-container>
 
     <ng-container matColumnDef="isActive">
@@ -58,7 +51,7 @@
 
     <ng-container matColumnDef="email">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Email </th>
-      <td mat-cell *matCellDef="let user"> {{ user.email }} </td>
+      <td mat-cell *matCellDef="let user" class="large-data"> {{ user.email }} </td>
     </ng-container>
 
     <ng-container matColumnDef="phone">
@@ -68,17 +61,17 @@
 
     <ng-container matColumnDef="address">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Address </th>
-      <td mat-cell *matCellDef="let user"> {{ user.address }} </td>
+      <td mat-cell *matCellDef="let user" class="large-data"> {{ user.address }} </td>
     </ng-container>
 
     <ng-container matColumnDef="about">
       <th mat-header-cell *matHeaderCellDef> about </th>
-      <td mat-cell *matCellDef="let user"> {{ user.about }} </td>
+      <td mat-cell *matCellDef="let user" class="large-data vertical-padding"> {{ user.about }} </td>
     </ng-container>
 
     <ng-container matColumnDef="registered">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Registered </th>
-      <td mat-cell *matCellDef="let user"> {{ user.registered }} </td>
+      <td mat-cell *matCellDef="let user" class="large-data"> {{ user.registered }} </td>
     </ng-container>
 
     <ng-container matColumnDef="latitude">
@@ -93,7 +86,7 @@
 
     <ng-container matColumnDef="greeting">
       <th mat-header-cell *matHeaderCellDef> greeting </th>
-      <td mat-cell *matCellDef="let user"> {{ user.greeting }} </td>
+      <td mat-cell *matCellDef="let user" class="large-data"> {{ user.greeting }} </td>
     </ng-container>
 
     <ng-container matColumnDef="favoriteFruit">
@@ -102,7 +95,7 @@
     </ng-container>
 
     <ng-container matColumnDef="friends">
-      <th mat-header-cell *matHeaderCellDef> Friends </th>
+      <th mat-header-cell *matHeaderCellDef class="center-header"> Friends </th>
       <td mat-cell *matCellDef="let user">
         <ul>
           <li *ngFor="let friend of user.friends">
@@ -113,13 +106,20 @@
     </ng-container>
 
     <ng-container matColumnDef="tags">
-      <th mat-header-cell *matHeaderCellDef> Tags </th>
+      <th mat-header-cell *matHeaderCellDef class="center-header"> Tags </th>
       <td mat-cell *matCellDef="let user">
         <ul>
           <li *ngFor="let tag of user.tags">
             {{ tag }}
           </li>
         </ul>
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="picture">
+      <th mat-header-cell *matHeaderCellDef> Picture </th>
+      <td mat-cell *matCellDef="let user">
+        <img [src]="user.picture">
       </td>
     </ng-container>
   
