--- a/src/app/users/users.component.scss
+++ b/src/app/users/users.component.scss
@@ -17,11 +17,11 @@
   }
   
   .mat-row:nth-child(even){
-    background-color: #D2F0ED;
+    background-color: #D1E7E4;
   }
   
   .mat-row:nth-child(odd){
-    background-color:#dee7e6;
+    background-color:#9DADAB;
   }
   
   td {
