--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -65,7 +65,7 @@
     </ng-container>
 
     <ng-container matColumnDef="about">
-      <th mat-header-cell *matHeaderCellDef> about </th>
+      <th mat-header-cell *matHeaderCellDef> About </th>
       <td mat-cell *matCellDef="let user" class="large-data vertical-padding"> {{ user.about }} </td>
     </ng-container>
 
@@ -85,7 +85,7 @@
     </ng-container>
 
     <ng-container matColumnDef="greeting">
-      <th mat-header-cell *matHeaderCellDef> greeting </th>
+      <th mat-header-cell *matHeaderCellDef> Greeting </th>
       <td mat-cell *matCellDef="let user" class="large-data"> {{ user.greeting }} </td>
     </ng-container>
 
@@ -122,6 +122,13 @@
         <img [src]="user.picture">
       </td>
     </ng-container>
+
+    <ng-container matColumnDef="guid">
+        <th mat-header-cell *matHeaderCellDef> guid </th>
+        <td mat-cell *matCellDef="let user">
+          {{ user.guid }}
+        </td>
+      </ng-container>
   
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
