--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -5,12 +5,12 @@
 
   <table mat-table matSort [dataSource]="dataSource" class="mat-elevation-z8">
     <ng-container matColumnDef="index">
-      <th mat-header-cell *matHeaderCellDef> # </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> # </th>
       <td mat-cell *matCellDef="let user"> {{ user.index }} </td>
     </ng-container>
 
     <ng-container matColumnDef="_id">
-      <th mat-header-cell *matHeaderCellDef> Id </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Id </th>
       <td mat-cell *matCellDef="let user" class="large-data"> {{ user._id }} </td>
     </ng-container>
 
@@ -124,7 +124,7 @@
     </ng-container>
 
     <ng-container matColumnDef="guid">
-        <th mat-header-cell *matHeaderCellDef> guid </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> guid </th>
         <td mat-cell *matCellDef="let user">
           {{ user.guid }}
         </td>
